[tool.poetry]
name = "fasterkid"
version = "0.1.0"
description = ""
authors = ["ogdhruv <dhruvrohilla.has@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fasterkid = 'fasterkid.cli:main'